k8s/base/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
