k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: REPLACE_ACM_CERT_ARN
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  rules:
    - host: REPLACE_DOMAIN_HOST
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
  tls:
    - hosts:
        - REPLACE_DOMAIN_HOST
      secretName: tls-placeholder
